# nczarr-viewer

./: .gitignore  .readthedocs.yaml  Dockerfile  Dockerfile.docs  README.md  dashapp copy.py  dashapp.py  dashappdev.py  pyproject.toml  requirements.txt  run.py  test_cmems_direct.py
.github/workflows/: docs.yml
assets/: marp.css  style.css
dash_nczarr_viewer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: .nojekyll  404.html  Makefile  README.md  api.rst  conf.py  dash_nczarr_viewer_presentation.html  dash_nczarr_viewer_presentation.md  dashapp.rst  dockerfile.rst  index.html  index.rst  make.bat  nczarr_viewer_presentation.md  redirect.html  requirements.txt
docs/.doctrees/: api.doctree  environment.pickle
docs/_build/html/: .buildinfo  api.html  dashapp.html  dockerfile.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/_modules/: data.html  dimension.html  index.html  main.html  variables.html  zarr_data_viewer.html
docs/_build/html/_sources/: index.rst.txt  usage.rst.txt
docs/_modules/: dimension.html
docs/source/: api.rst  conf.py  dashapp.rst  dockerfile.rst  index.rst  usage.rst
docs/source/static/: custom.css  custom.js  redirect.js
src/: data.py  dimension.py  layout_manager.py  main.py  setup.py  variables.py  zarr_data_viewer.py
src/assets/: style.css
src/dash_nczarr_viewer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/nczarr_viewer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
