[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nczarr-viewer"
version = "0.1.0"
description = "A Simple Geo NetCDF and Zarr Dataset Viewing App"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Samuel Fooks", email = "samuel.fooks@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "dash",
    "dash-bootstrap-components",
    "dash-core-components",
    "dash-html-components",
    "xarray",
    "plotly",
    "zarr",
    "aiohttp",
    "fsspec",
    "cartopy",
    "netCDF4",
    "cfgrib",
    "h5netcdf",
    "leafmap",
    "folium",
    "copernicusmarine",
    "pyproj>=3.7.1",
    "pip>=25.2",
    "dash-leaflet>=1.0.15",
    "matplotlib>=3.10.1",
    "pillow>=11.2.1",
    "pydeck>=0.8.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]

[project.urls]
Homepage = "https://github.com/samuelfooks/nczarr-viewer"
